--- a/desktop/mainwindow.ui
+++ b/desktop/mainwindow.ui
@@ -46,6 +46,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>Новая</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
