--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.luxoft.clipboard.RoomsActivity" >
+    tools:context="com.luxoft.clipboard.Main" >
 
     <TextView
         android:layout_width="wrap_content"
