--- a/desktop/gui/mainwindow.ui
+++ b/desktop/gui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>347</width>
-    <height>418</height>
+    <width>314</width>
+    <height>380</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -41,6 +41,37 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButton_3">
+          <property name="text">
+           <string>Сменить</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="nameLabel">
+          <property name="text">
+           <string>Имя устройства: </string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="changeNamePushButton">
           <property name="text">
            <string>Сменить</string>
           </property>
@@ -107,7 +138,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>347</width>
+     <width>314</width>
      <height>21</height>
     </rect>
    </property>
