add clipboard text supporting

--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:background="@android:color/transparent"
-            android:src="@android:drawable/ic_menu_close_clear_cancel" />
+            android:src="@android:drawable/ic_menu_revert" />
 
         <ListView
             android:id="@+id/devicesList"
