--- a/desktop/gui/images.qrc
+++ b/desktop/gui/images.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>images/communities.svg</file>
+        <file>images/colorful.svg</file>
     </qresource>
 </RCC>
