--- a/desktop/gui/mainwindow.ui
+++ b/desktop/gui/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>314</width>
+    <width>372</width>
     <height>428</height>
    </rect>
   </property>
@@ -119,10 +119,22 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>314</width>
+     <width>372</width>
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuSettings">
+    <property name="minimumSize">
+     <size>
+      <width>350</width>
+      <height>350</height>
+     </size>
+    </property>
+    <property name="title">
+     <string>Settings</string>
+    </property>
+   </widget>
+   <addaction name="menuSettings"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
