--- a/desktop/gui/passworddialog.ui
+++ b/desktop/gui/passworddialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>176</width>
-    <height>123</height>
+    <width>196</width>
+    <height>135</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Имя комнаты </string>
+        <string>Room name</string>
        </property>
       </widget>
      </item>
@@ -33,7 +33,7 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Введите Пароль</string>
+        <string>Password</string>
        </property>
       </widget>
      </item>
@@ -67,12 +67,12 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>185</x>
+     <y>124</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
-     <y>274</y>
+     <y>134</y>
     </hint>
    </hints>
   </connection>
@@ -83,12 +83,12 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>185</x>
+     <y>124</y>
     </hint>
     <hint type="destinationlabel">
-     <x>286</x>
-     <y>274</y>
+     <x>195</x>
+     <y>134</y>
     </hint>
    </hints>
   </connection>
