new mainwindow initial commit

--- a/desktop/gui/images.qrc
+++ b/desktop/gui/images.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>images/communities.svg</file>
         <file>images/colorful.svg</file>
+        <file>images/server.svg</file>
     </qresource>
 </RCC>
