--- a/desktop/gui/images.qrc
+++ b/desktop/gui/images.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/communities.svg</file>
-        <file>images/colorful.svg</file>
-        <file>images/server.svg</file>
+        <file>images/server_icon.svg</file>
+        <file>images/client_icon.svg</file>
     </qresource>
 </RCC>
