--- a/desktop/gui/settingsdialog.ui
+++ b/desktop/gui/settingsdialog.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>345</width>
-    <height>176</height>
+    <width>481</width>
+    <height>273</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -39,7 +39,7 @@
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>Save no more than </string>
+           <string>Save files no more than </string>
           </property>
          </widget>
         </item>
@@ -49,6 +49,32 @@
            <string>500 MB</string>
           </property>
          </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Save in history no more than</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <item>
+             <widget class="QSpinBox" name="itemspinbox">
+              <property name="specialValueText">
+               <string>50 items</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
